conf/homepage/homepage-ingress-tls.yaml
# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: http-redirect-homepage
#   # namespace: default
# spec:
#   entryPoints:
#     - web
#   routes:
#     - kind: Rule
#       match: Host(`homepage.idcrook.dev`)
#       services:
#         - name: homepage-svc
#           port: 3000
#       middlewares:
#         - name: redirect-to-https

# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: https-homepage
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - kind: Rule
#       match: Host(`homepage.idcrook.dev`)
#       services:
#         - name: homepage-svc
#           port: 3000
#       middlewares:
#         # - name: kube-system-my-traefik-auth-with-exceptions@kubernetescrd
#         - name: tinyauth-tinyauth-middleware@kubernetescrd # tinyauth-middleware
#   tls:
#     certResolver: wildcardresolver

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        tinyauth.apps.homepage.config.domain: homepage.idcrook.dev
        tinyauth.apps.homepage.path.block: ^\/
        traefik.ingress.kubernetes.io/router.middlewares: |
          default-redirect-to-https@kubernetescrd,
          tinyauth-tinyauth-middleware@kubernetescrd
    name: homepage-ingress
spec:
    rules:
        - host: homepage.idcrook.dev
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: homepage-svc
                        port:
                            number: 3000
